Cacti CHANGELOG

SVN
-bug: Warning in lib/snmp.php by misspelled variable
-bug#0001765: "Tech Support" report indicates error with RRDTool 1.4.x
-bug#0001771: "index count changed" not implemented for query_unix_partitions.pl
              query_host_partitions.pl, query_cpu_partitions.pl, ss_host_cpu.php, ss_host_disk.php
-bug#0001763: Adding permissions doesn't work 

0.8.7f
-security: SQL injection and shell escaping issues reported by Bonsai Information Security (http://www.bonsai-sec.com)
-security: Cross-site scripting issues reported by VUPEN Security (http://www.vupen.com)
-security: MOPS-2010-023: Cacti Graph Viewer SQL Injection Vulnerability (http://php-security.org)
-bug#0001125: XML parse error on template import with degree symbol 
-bug#0001311: Access denied for graph-only users when accessing index.php directly
-bug#0001366: Exported data templates do not import special characters properly 
-bug#0001416: Graph Export fails with EXPORT FATAL ERROR: Export path /some/path/root/export is within a system path /root. Can not continue. 
-bug#0001452: Missing "<" and ">" in "Collection Methods=>Data Input Methods=>"Input String" after importing template 
-bug#0001461: Data query export/import fails
-bug#0001492: RRDTool 1.3 series fonts (fontconfig) support
-bug#0001506: Reindexing fails due to global include issue in lib/snmp.php
-bug#0001522: Special characters break parsing of template data
-bug#0001524: Export graphs and Classical Presentation does not honor per graph export rules
-bug#0001528: ICMP Ping availabilty broken in UI for Windows Servers using IIS
-bug#0001535: No display of parent ID in tree nodes for CLI tree add script
-bug#0001543: All graphs are exported dispite graph export rules
-bug#0001549: Function array_to_sql_or creates poor sql where clauses
-bug#0001557: Quotes in Text Format graph template field break graph rendering
-bug#0001587: 64bit HEX Strings don't convert to Decimal on 32bit Systems