@@ -2,10 +2,11 @@ Cacti CHANGELOG
 
 SVN
 -bug: Warning in lib/snmp.php by misspelled variable
+-bug#0001763: Adding permissions doesn't work 
 -bug#0001765: "Tech Support" report indicates error with RRDTool 1.4.x
 -bug#0001771: "index count changed" not implemented for query_unix_partitions.pl
               query_host_partitions.pl, query_cpu_partitions.pl, ss_host_cpu.php, ss_host_disk.php
--bug#0001763: Adding permissions doesn't work 
+-bug#0001775: Tech Support page does not allow for no memory limit in PHP              
 
 0.8.7f
 -security: SQL injection and shell escaping issues reported by Bonsai Information Security (http://www.bonsai-sec.com)
